#1112 #1113 #1114 - cleanup